languages/montiarc-fe/src/test/resources/unused/contextconditions/valid/ImportComponent.arc
package contextconditions.valid;

import contextconditions.valid.BumpThroughPut;

// TODO: Unused?
component ImportComponent {

    port
        in String stringIn,
        out String stringOut;

}