languages/montiarc-fe/src/test/resources/unused/contextconditions/invalid/IncompatibleVariableType.arc
package contextconditions.invalid;

import java.util.HashMap;

// TODO: Unused?
component IncompatibleVariableType {

  port in String s;

  var HashMap<String, Integer> x;
  
  init {
    x = new HashMap<String, Integer>();
  }
  
}